Fix: aos horizontal scroll

--- a/sass/blocks/_information.sass
+++ b/sass/blocks/_information.sass
@@ -3,6 +3,7 @@
   &__block
     display: flex
     justify-content: space-between
+    overflow-x: hidden
     &:first-child
       margin-bottom: 4rem
   &__image-wrapper
